--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
     />
 
     <!-- Content Style -->
-    <link rel="stylesheet" href="/public/css/header.css" />
-    <link rel="stylesheet" href="/public/css/font.css" />
-    <link rel="stylesheet" href="/public/css/button.css" />
-    <link rel="stylesheet" href="/public/css/main.css" />
-    <link rel="stylesheet" href="/public/css/footer.css" />
-    <link rel="stylesheet" href="/public/css/carousel.css" />
-    <link rel="stylesheet" href="/public/css/tablet.css" />
-    <link rel="stylesheet" href="/public/css/responsif.css" />
-    <link rel="stylesheet" href="/public/css/sidebar.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/font.css" />
+    <link rel="stylesheet" href="/css/button.css" />
+    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/carousel.css" />
+    <link rel="stylesheet" href="/css/tablet.css" />
+    <link rel="stylesheet" href="/css/responsif.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
 
     <!-- Carousel Style -->
     <link
@@ -61,11 +61,11 @@
           class="navbar-brand d-inline-flex justify-content-start"
           style="margin-top: 0.313rem"
         >
-          <img src="/public/assets/images/Logo.svg" alt="" />
+          <img src="/images/Logo.svg" alt="" />
         </a>
         <!-- Header -->
         <div class="d-lg-none d-block" onclick="toggleSidebar()">
-          <img src="/public/assets/icon/menubar.svg" alt="" />
+          <img src="/icon/menubar.svg" alt="" />
         </div>
         <ul
           class="nav mobile-nav d-none d-lg-flex flex-row justify-content-between align-items-center"
@@ -172,7 +172,7 @@
             data-aos-easing="ease-in-sine"
           >
             <a class="" href="">Learn more </a>
-            <img src="/public/assets/icon/arrow-right.svg" alt="arrow-right" />
+            <img src="/icon/arrow-right.svg" alt="arrow-right" />
           </button>
         </div>
 
@@ -180,20 +180,20 @@
           <img
             data-aos="fade-left"
             class="dashboard"
-            src="/public/assets/images/dashboard.svg"
+            src="/images/dashboard.svg"
             alt="dashboard"
           />
           <img
             data-aos="fade-right"
             class="help"
-            src="/public/assets/images/help.svg"
+            src="/images/help.svg"
             alt="help"
           />
           <img
             class="send"
             data-aos="fade-up-right"
             data-aos-duration="600"
-            src="/public/assets/icon/send.svg"
+            src="/icon/send.svg"
             alt="send"
           />
           <div
@@ -226,7 +226,7 @@
             </div>
             <img
               class="patient"
-              src="/public/assets/images/patient.svg"
+              src="/images/patient.svg"
               alt="patient"
             />
           </div>
@@ -238,25 +238,25 @@
           >
             <img
               class="activity"
-              src="/public/assets/images/Activity.svg"
+              src="/images/Activity.svg"
               alt="activity"
             />
-            <img class="dot" src="/public/assets/icon/dot.svg" alt="dot" />
-            <img class="info" src="/public/assets/images/info.svg" alt="info" />
+            <img class="dot" src="/icon/dot.svg" alt="dot" />
+            <img class="info" src="/images/info.svg" alt="info" />
           </div>
           <div class="mentor-container">
             <img
               data-aos="fade-up"
               data-aos-duration="1000"
               class="mentor1"
-              src="/public/assets/images/mentor1.svg"
+              src="/images/mentor1.svg"
               alt="mentor1"
             />
             <img
               data-aos="fade-up"
               data-aos-duration="2500"
               class="mentor2"
-              src="/public/assets/images/mentor2.svg"
+              src="/images/mentor2.svg"
               alt="mentor2"
             />
           </div>
@@ -278,7 +278,7 @@
               </div>
               <img
                 class="task1"
-                src="/public/assets/images/task1.svg"
+                src="/images/task1.svg"
                 alt="task1"
               />
             </div>
@@ -300,7 +300,7 @@
               </div>
               <img
                 class="task2"
-                src="/public/assets/images/task2.svg"
+                src="/images/task2.svg"
                 alt="task2"
               />
             </div>
@@ -318,7 +318,7 @@
               </div>
               <img
                 class="today1"
-                src="/public/assets/images/task-today.svg"
+                src="/images/task-today.svg"
                 alt="today1"
               />
             </div>
@@ -331,7 +331,7 @@
           >
             <img
               class="mentor3"
-              src="/public/assets/images/mentor3.svg"
+              src="/images/mentor3.svg"
               alt="mentor3"
             />
             <div
@@ -357,13 +357,13 @@
               <img
                 data-aos="fade-up"
                 data-aos-duration="1000"
-                src="/public/assets/images/Calender.svg"
+                src="/images/Calender.svg"
                 alt=""
               />
             </div>
             <img
               class="second-main-img"
-              src="/public/assets/images/img-group-1.png"
+              src="/images/img-group-1.png"
               alt="image-1"
             />
           </figure>
@@ -390,7 +390,7 @@
             >
               <a class="" href="">Learn more </a>
               <img
-                src="/public/assets/icon/arrow-right.svg"
+                src="/icon/arrow-right.svg"
                 alt="arrow-right"
               />
             </button>
@@ -423,7 +423,7 @@
             >
               <a class="" href="">Learn more </a>
               <img
-                src="/public/assets/icon/arrow-right.svg"
+                src="/icon/arrow-right.svg"
                 alt="arrow-right"
               />
             </button>
@@ -436,7 +436,7 @@
           >
             <div class="widget-2 d-flex flex-column gap-2">
               <img
-                src="/public/assets/images/widget-2.svg"
+                src="/images/widget-2.svg"
                 data-aos="fade-up"
                 data-aos-duration="1000"
                 alt=""
@@ -459,14 +459,14 @@
                 </div>
                 <img
                   class="task1"
-                  src="/public/assets/images/task1.svg"
+                  src="/images/task1.svg"
                   alt="task1"
                 />
               </div>
             </div>
             <img
               class="second-main-img"
-              src="/public/assets/images/img-group-2.png"
+              src="/images/img-group-2.png"
               alt="image-2"
             />
           </figure>
@@ -486,7 +486,7 @@
               data-aos="fade-up"
               data-aos-duration="1000"
             >
-              <img src="/public/assets/images/widget-3.svg" alt="" />
+              <img src="/images/widget-3.svg" alt="" />
               <div
                 class="task-progress"
                 id="task-progress5"
@@ -504,14 +504,14 @@
                 </div>
                 <img
                   class="task1"
-                  src="/public/assets/images/task1.svg"
+                  src="/images/task1.svg"
                   alt="task1"
                 />
               </div>
             </div>
             <img
               class="second-main-img"
-              src="/public/assets/images/img-group-3.png"
+              src="/images/img-group-3.png"
               alt="image-1"
             />
           </figure>
@@ -538,7 +538,7 @@
             >
               <a class="" href="">Learn more </a>
               <img
-                src="/public/assets/icon/arrow-right.svg"
+                src="/icon/arrow-right.svg"
                 alt="arrow-right"
               />
             </button>
@@ -563,27 +563,27 @@
               <div class="card-body">
                 <div class="card-star d-flex gap-1">
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
@@ -596,7 +596,7 @@
                 </p>
                 <div class="card-user d-flex gap-3">
                   <img
-                    src="/public/assets/images/avatar-1.svg"
+                    src="/images/avatar-1.svg"
                     class="card-img-top avatar"
                     alt="avatar-1"
                   />
@@ -613,27 +613,27 @@
               <div class="card-body">
                 <div class="card-star d-flex gap-1">
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
@@ -645,7 +645,7 @@
                 </p>
                 <div class="card-user d-flex gap-3">
                   <img
-                    src="/public/assets/images/avatar-2.svg"
+                    src="/images/avatar-2.svg"
                     class="card-img-top avatar"
                     alt="avatar-2"
                   />
@@ -662,27 +662,27 @@
               <div class="card-body">
                 <div class="card-star d-flex gap-1">
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
@@ -694,7 +694,7 @@
                 </p>
                 <div class="card-user d-flex gap-3">
                   <img
-                    src="/public/assets/images/avatar-4.svg"
+                    src="/images/avatar-4.svg"
                     class="card-img-top avatar"
                     alt="avatar-4"
                   />
@@ -710,27 +710,27 @@
               <div class="card-body">
                 <div class="card-star d-flex gap-1">
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
@@ -742,7 +742,7 @@
                 </p>
                 <div class="card-user d-flex gap-3">
                   <img
-                    src="/public/assets/images/avatar-3.svg"
+                    src="/images/avatar-3.svg"
                     class="card-img-top avatar"
                     alt="avatar-3"
                   />
@@ -758,27 +758,27 @@
               <div class="card-body">
                 <div class="card-star d-flex gap-1">
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
                   <img
-                    src="/public/assets/icon/star.svg"
+                    src="/icon/star.svg"
                     alt="star"
                     class="star-icon"
                   />
@@ -790,7 +790,7 @@
                 </p>
                 <div class="card-user d-flex gap-3">
                   <img
-                    src="/public/assets/images/avatar-5.svg"
+                    src="/images/avatar-5.svg"
                     class="card-img-top avatar"
                     alt="avatar-5"
                   />
@@ -809,13 +809,13 @@
         >
           <button type="button" class="custom-next">
             <img
-              src="/public/assets/icon/slide-left-arrow.svg"
+              src="/icon/slide-left-arrow.svg"
               alt="slide-left"
             />
           </button>
           <button type="button" class="custom-prev">
             <img
-              src="/public/assets/icon/slide-right-arrow.svg"
+              src="/icon/slide-right-arrow.svg"
               alt="slide-right"
             />
           </button>
@@ -826,7 +826,7 @@
     <footer class="text-white footer-top d-flex flex-column align-items-start">
       <div class="d-flex flex-lg-row flex-column">
         <div class="footer-brand">
-          <img src="/public/assets/images/Logo.svg" alt="" />
+          <img src="/images/Logo.svg" alt="" />
           <p>Collaboration platform for mordern team</p>
         </div>
         <div class="container mt-4 nav-footer">
@@ -916,11 +916,11 @@
       integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
       crossorigin="anonymous"
     ></script>
-    <script src="/src/script/slick-carousel.js"></script>
-    <script src="/src/script/chat-mentor.js"></script>
-    <script src="/src/script/progress-bar.js"></script>
-    <script src="/src/script/circle-bar.js"></script>
-    <script src="/src/script/sidebar.js"></script>
+    <script src="/script/slick-carousel.js"></script>
+    <script src="/script/chat-mentor.js"></script>
+    <script src="/script/progress-bar.js"></script>
+    <script src="/script/circle-bar.js"></script>
+    <script src="/script/sidebar.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
